--- a/lmtapp/app/src/main/res/layout/loan_tableview.xml
+++ b/lmtapp/app/src/main/res/layout/loan_tableview.xml
@@ -17,7 +17,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/txt_rows1"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -25,35 +25,35 @@
                 />
 
             <TextView
-                android:id="@+id/textView16"
+                android:id="@+id/txt_rows2"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                  />
 
             <TextView
-                android:id="@+id/textView18"
+                android:id="@+id/txt_rows3"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                  />
 
             <TextView
-                android:id="@+id/textView20"
+                android:id="@+id/txt_rows4"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                />
 
             <TextView
-                android:id="@+id/textView27"
+                android:id="@+id/txt_rows5"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                />
 
             <TextView
-                android:id="@+id/textView28"
+                android:id="@+id/txt_rows6"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
