--- a/lmtapp/app/src/main/res/layout/fragment_cred_view.xml
+++ b/lmtapp/app/src/main/res/layout/fragment_cred_view.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".cred_view">
 
-   <RelativeLayout
+    <RelativeLayout
        android:id="@+id/headrelay"
        android:layout_width="match_parent"
        android:layout_height="150dp"
@@ -111,7 +111,7 @@
 
         <TextView
             android:id="@+id/edt_prinamount"
-            android:layout_width="190dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/spinner2"
             android:layout_alignParentEnd="true"
@@ -119,7 +119,6 @@
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
             android:background="@color/white"
-
             android:gravity="center"
             />
 
@@ -135,7 +134,7 @@
 
         <TextView
             android:id="@+id/edt_intrate"
-            android:layout_width="190dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/edt_prinamount"
             android:layout_alignParentEnd="true"
@@ -159,7 +158,7 @@
 
         <TextView
             android:id="@+id/edt_paymeth"
-            android:layout_width="190dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/edt_intrate"
             android:layout_alignParentEnd="true"
@@ -185,7 +184,7 @@
 
         <TextView
             android:id="@+id/edt_bal"
-            android:layout_width="190dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
@@ -275,10 +274,23 @@
                 <ListView
                     android:id="@+id/cred_listView"
                     android:layout_width="390dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="300dp"
                     android:layout_below="@id/titlelay">
 
                 </ListView>
+
+            <Button
+                android:id="@+id/btn_pay"
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:layout_below="@id/cred_listView"
+                android:layout_centerInParent="true"
+                android:layout_margin="20dp"
+                android:textSize="20sp"
+                android:background="@drawable/btn_signupbg"
+                android:hapticFeedbackEnabled="true"
+                android:elevation="@dimen/cardview_default_elevation"
+                android:text="@string/btn_pay" />
 
         </RelativeLayout>
     </HorizontalScrollView>
