--- a/lmtapp/app/src/main/res/layout/loan_tableview.xml
+++ b/lmtapp/app/src/main/res/layout/loan_tableview.xml
@@ -56,6 +56,7 @@
                 android:id="@+id/txt_rows6"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:textSize="12sp"
                 />
         </LinearLayout>
